@@ -33,7 +33,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -91,7 +91,7 @@ public class MetadataShellIntegrationTest {
             if (canLock) {
                 assertEquals(NoSuchFileException.class,
                     assertThrows(ExecutionException.class,
-                        () -> env.shell.run(Collections.emptyList())).
+                        () -> env.shell.run(List.of())).
                             getCause().getClass());
             } else {
                 FileLock fileLock = new FileLock(new File(env.tempDir, ".lock"));
@@ -101,7 +101,7 @@ public class MetadataShellIntegrationTest {
                         ". Please ensure that no broker or controller process is using this " +
                         "directory before proceeding.",
                         assertThrows(RuntimeException.class,
-                            () -> env.shell.run(Collections.emptyList())).
+                            () -> env.shell.run(List.of())).
                                 getMessage());
                 } finally {
                     fileLock.destroy();
